# python-netflix-style

./: .env.example  .gitignore  .~lock.discovery_tagalias.csv#  README.md  debug.txt~  discovery_tagalias.csv  file.txt  generate_workflow.py  make.sh  manage.py  pyproject.toml  test.py
automationapp/: context_processor.py  settings.py  urls.py
database/seeders/: age_verification_seeder.py
docker/: .env.example  Dockerfile  docker-compose.yml
docker/manticore/: manticore.conf
docker/nginx/: gzip.conf  my_custom_proxy_settings.conf
docker/nginx/vhost/: mydomain.com
docs/: algorithm.md  database.md  related_tags.md  semantic_tag_scoring.md  tags.md
scripts/: production_deployment.sh
src/age_verification/: apps.py  models.py  urls.py  views.py
src/age_verification/middlewares/: __init__.py  age_verification_middleware.py
src/age_verification/migrations/: 0001_initial.py
src/chat/: bot.py  models.py  urls.py  views.py
src/core/: sitemaps.py  tasks.py  urls.py  utils.py  views.py
src/discovery/: apps.py  tasks.py  urls.py  views.py
src/events/: apps.py  events.py  models.py  tasks.py
src/inbox/: views.py
src/manticore/: apps.py
src/media/: admin.py  models.py  tasks.py  urls.py  urls_api.py  views.py
src/media_discovery/: apps.py
src/myadmin/: apps.py  urls.py  views.py
src/notification/: views.py
src/sitemap/: apps.py  models.py  sitemaps.py  tasks.py  urls.py
src/tiktok/: models.py  urls.py  views.py
static/: manifest.json
templates/: 410.html  error_base.html
templates/core/: layout.html
templatetags/: number_format.py
(+309 files in other folders)
